[project]
name = "comfyui-runonrunpod"
description = "Run ComfyUI workflows on RunPod Serverless"
version = "0.1.0"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "boto3",
]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository = "https://github.com/metebalci/ComfyUI-RunOnRunpod"
Documentation = "https://github.com/metebalci/ComfyUI-RunOnRunpod/wiki"
"Bug Tracker" = "https://github.com/metebalci/ComfyUI-RunOnRunpod/issues"

[tool.comfy]
PublisherId = "metebalci"
DisplayName = "Run on RunPod"
Icon = "https://raw.githubusercontent.com/metebalci/ComfyUI-RunOnRunpod/main/icon.svg"
includes = ["web"]
"requires-comfyui" = ">=0.16.4"
